# HSIFoodIngr-Toolkit

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
.cursor/rules/: plan-dataset-band-selection.mdc  plan-dataset.mdc  plan-validator-cli.mdc  plan-visualizer-gui.mdc  project-abstract.mdc
hsifoodingr/: __init__.py
hsifoodingr/datasets/: __init__.py  hsi_food_ingr.py
hsifoodingr/tools/: __init__.py  check_h5.py  view_hsi.py
